--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
   "name": "carpark-backfill",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.0",
+  "private": true,
   "type": "module",
-  "main": "index.js",
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.325.0",
-    "@ipld/car": "^5.1.1",
-    "cardex": "^1.0.1",
-    "debug": "^4.3.4",
-    "it-pipe": "^3.0.1",
-    "multiformats": "^11.0.2",
-    "prom-client": "^14.2.0",
-    "p-retry": "^5.1.2",
-    "uint8arrays": "^4.0.3"
+  "scripts": {
+    "dev": "sst dev",
+    "build": "sst build",
+    "deploy": "sst deploy",
+    "remove": "sst remove",
+    "console": "sst console",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/node": "18.16.3",
-    "@types/debug": "^4.1.7",
-    "dotenv": "^16.0.3"
+    "sst": "^2.8.4",
+    "constructs": "10.1.156",
+    "typescript": "^5.0.4",
+    "@tsconfig/node16": "^1.0.3"
   },
-  "scripts": {
-    "start": "NODE_TLS_REJECT_UNAUTHORIZED=0 DEBUG=backfill:* node bin.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Vasco Santos <santos.vasco10@gmail.com>",
-  "license": "Apache-2.0 OR MIT"
+  "workspaces": [
+    "packages/*"
+  ],
+  "dependencies": {
+    "aws-cdk-lib": "2.72.1",
+    "node-fetch": "^3.3.1"
+  }
 }
