feat: run copy jobs

--- a/packages/backfill/Dockerfile
+++ b/packages/backfill/Dockerfile
@@ -8,5 +8,5 @@ RUN npm install
 COPY *.js *.json *.sh ./
 CMD [ "npm", "start", "backfill", "--silent"]
 
-EXPOSE 3000
-HEALTHCHECK --interval=60s --timeout=1s --start-period=5s --retries=3 CMD [ "curl" "https://127.0.0.1:3000" "--fail" ]
+# EXPOSE 3000
+# HEALTHCHECK --interval=60s --timeout=1s --start-period=5s --retries=3 CMD [ "curl" "https://127.0.0.1:3000" "--fail" ]
