--- a/packages/bucket-diff/package.json
+++ b/packages/bucket-diff/package.json
@@ -10,6 +10,7 @@
     "cardex": "^1.0.1",
     "concat": "^1.0.3",
     "debug": "^4.3.4",
+    "ipfs-core-utils": "^0.18.1",
     "it-ndjson": "^1.0.2",
     "it-pipe": "^3.0.1",
     "multiformats": "^11.0.2",
